--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FIFTH">
     <meta name="twitter:description" content="Tour dates, music releases, and updates from DJ and producer FIFTH.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="website/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <link rel="icon"  type="image/svg+xml" href="../svg/fifth_LOGO_2.svg">
+    <link rel="icon"  type="image/svg+xml" href="svg/fifth_LOGO_2.svg">
     <title>FIFTH - Drum & Bass Artist</title>
     <script type="application/ld+json">
     {
@@ -40,8 +40,8 @@
         <div class="header">
             <div class="logo">
                 <a href="index.html">
-                    <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH Logo" class="logo-black" style="width: 100px; height: auto;">
-                    <img src="../svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH Logo" class="logo-white" style="width: 100px; height: auto;">
+                    <img src="svg/fifth_LOGO_2.svg" alt="FIFTH Logo" class="logo-black" style="width: 100px; height: auto;">
+                    <img src="svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH Logo" class="logo-white" style="width: 100px; height: auto;">
                 </a>
             </div>
             
@@ -75,13 +75,13 @@
             <section id="hero" class="hero-section">
                 <div class="loading-overlay">
                     <div class="loading-logo">
-                        <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH" class="pulse-logo">
+                        <img src="svg/fifth_LOGO_2.svg" alt="FIFTH" class="pulse-logo">
                     </div>
                 </div>
                 <div class="hero-slideshow"></div>
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
+                    <img src="svg/fifth_LOGO_2.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
                 </div>
             </section>
 
@@ -104,7 +104,7 @@
             </section>
 
             <!-- Photo Divider 1 -->
-            <section class="photo-divider" style="background-image: url('../img/DSC01428.jpg');" data-aos="fade">
+            <section class="photo-divider" style="background-image: url('img/DSC01428.jpg');" data-aos="fade">
                 <div class="divider-overlay"></div>
             </section>
 
@@ -173,7 +173,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script src="website/script.js"></script>
 </body>
 </html>
 
