--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <li><a href="#music">Music</a></li>
                         <li><a href="#agenda">Agenda</a></li>
                         <li><a href="#updates">Updates</a></li>
-                        <li><a href="biography.html">Biography</a></li>
+                        <li><a href="website/biography.html">Biography</a></li>
                     </ul>
                     <div class="mobile-menu-socials">
                         <a href="https://open.spotify.com/artist/2nkPDrBTpqCFWeK3ZMLmlF" target="_blank" aria-label="Spotify"><i class="fa-brands fa-spotify"></i></a>
@@ -98,7 +98,7 @@
                     </div>
                     
                     <div class="view-all-btn-wrapper" data-aos="fade-up">
-                        <a href="music.html" class="view-all-btn">View All Releases</a>
+                        <a href="website/music.html" class="view-all-btn">View All Releases</a>
                     </div>
                 </div>
             </section>
@@ -145,7 +145,7 @@
                     <li><a href="#music">MUSIC</a></li>
                     <li><a href="#agenda">AGENDA</a></li>
                     <li><a href="#updates">UPDATES</a></li>
-                    <li><a href="biography.html">BIOGRAPHY</a></li>
+                    <li><a href="website/biography.html">BIOGRAPHY</a></li>
                     <li><a href="#">SOCIALS</a></li>
                 </ul>
             </div>  
