--- a/website/biography.html
+++ b/website/biography.html
@@ -28,7 +28,7 @@
     <div class="main-div">
         <div class="header">
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH Logo" class="logo-black" style="width: 100px; height: auto;">
                     <img src="../svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH Logo" class="logo-white" style="width: 100px; height: auto;">
                 </a>
@@ -42,9 +42,9 @@
                 </button>
                 <div class="mobile-menu-wrapper">
                     <ul class="mobile-menu-items">
-                        <li><a href="index.html#music">Music</a></li>
-                        <li><a href="index.html#agenda">Agenda</a></li>
-                        <li><a href="index.html#updates">Updates</a></li>
+                        <li><a href="../index.html#music">Music</a></li>
+                        <li><a href="../index.html#agenda">Agenda</a></li>
+                        <li><a href="../index.html#updates">Updates</a></li>
                         <li><a href="biography.html">Biography</a></li>
                     </ul>
                     <div class="mobile-menu-socials">
@@ -101,9 +101,9 @@
             <div class="footer-left">
                 <div>SITEMAP</div>
                 <ul>
-                    <li><a href="index.html#music">MUSIC</a></li>
-                    <li><a href="index.html#agenda">AGENDA</a></li>
-                    <li><a href="index.html#updates">UPDATES</a></li>
+                    <li><a href="../index.html#music">MUSIC</a></li>
+                    <li><a href="../index.html#agenda">AGENDA</a></li>
+                    <li><a href="../index.html#updates">UPDATES</a></li>
                     <li><a href="biography.html">BIOGRAPHY</a></li>
                     <li><a href="#">SOCIALS</a></li>
                 </ul>
