--- a/website/post.html
+++ b/website/post.html
@@ -16,7 +16,7 @@
     <div class="main-div">
         <div class="header">
             <div class="logo">
-                <a href="index.html#updates">
+                <a href="../index.html#updates">
                     <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH Logo" style="width: 100px; height: auto;">
                 </a>
             </div>
@@ -39,12 +39,12 @@
                 </button>
                 <div class="mobile-menu-wrapper">
                     <ul class="mobile-menu-items">
-                        <li><a href="index.html#hero">Home</a></li>
-                        <li><a href="index.html#music">Music</a></li>
-                        <li><a href="index.html#agenda">Agenda</a></li>
-                        <li><a href="index.html#updates">Updates</a></li>
-                        <li><a href="index.html#biography">Biography</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="../index.html#hero">Home</a></li>
+                        <li><a href="../index.html#music">Music</a></li>
+                        <li><a href="../index.html#agenda">Agenda</a></li>
+                        <li><a href="../index.html#updates">Updates</a></li>
+                        <li><a href="biography.html">Biography</a></li>
+                        <li><a href="../index.html#contact">Contact</a></li>
                     </ul>
                     <div class="mobile-menu-socials">
                         <a href="https://open.spotify.com/artist/2nkPDrBTpqCFWeK3ZMLmlF" target="_blank" aria-label="Spotify"><i class="fa-brands fa-spotify"></i></a>
@@ -60,7 +60,7 @@
 
         <main class="main-body">
             <div class="page-content" style="padding-top: 100px;">
-                <a href="index.html#updates" class="back-link" data-aos="fade-in">
+                <a href="../index.html#updates" class="back-link" data-aos="fade-in">
                     <i class="fa-solid fa-arrow-left"></i> Back to all posts
                 </a>
                 
@@ -76,11 +76,11 @@
             <div class="footer-left">
                 <div>SITEMAP</div>
                 <ul>
-                    <li><a href="index.html#music">MUSIC</a></li>
-                    <li><a href="index.html#agenda">AGENDA</a></li>
-                    <li><a href="index.html#updates">UPDATES</a></li>
-                    <li><a href="index.html#biography">BIOGRAPHY</a></li>
-                    <li><a href="index.html#contact">CONTACT</a></li>
+                    <li><a href="../index.html#music">MUSIC</a></li>
+                    <li><a href="../index.html#agenda">AGENDA</a></li>
+                    <li><a href="../index.html#updates">UPDATES</a></li>
+                    <li><a href="biography.html">BIOGRAPHY</a></li>
+                    <li><a href="../index.html#contact">CONTACT</a></li>
                     <li><a href="#">SOCIALS</a></li>
                 </ul>
             </div>  
