--- a/website/music.html
+++ b/website/music.html
@@ -28,7 +28,7 @@
     <div class="main-div">
         <div class="header">
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH Logo" class="logo-black" style="width: 100px; height: auto;">
                     <img src="../svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH Logo" class="logo-white" style="width: 100px; height: auto;">
                 </a>
@@ -42,9 +42,9 @@
                 </button>
                 <div class="mobile-menu-wrapper">
                     <ul class="mobile-menu-items">
-                        <li><a href="index.html#music">Music</a></li>
-                        <li><a href="index.html#agenda">Agenda</a></li>
-                        <li><a href="index.html#updates">Updates</a></li>
+                        <li><a href="../index.html#music">Music</a></li>
+                        <li><a href="../index.html#agenda">Agenda</a></li>
+                        <li><a href="../index.html#updates">Updates</a></li>
                         <li><a href="biography.html">Biography</a></li>
                     </ul>
                     <div class="mobile-menu-socials">
@@ -79,9 +79,9 @@
             <div class="footer-left">
                 <div>SITEMAP</div>
                 <ul>
-                    <li><a href="index.html#music">MUSIC</a></li>
-                    <li><a href="index.html#agenda">AGENDA</a></li>
-                    <li><a href="index.html#updates">UPDATES</a></li>
+                    <li><a href="../index.html#music">MUSIC</a></li>
+                    <li><a href="../index.html#agenda">AGENDA</a></li>
+                    <li><a href="../index.html#updates">UPDATES</a></li>
                     <li><a href="biography.html">BIOGRAPHY</a></li>
                     <li><a href="#">SOCIALS</a></li>
                 </ul>
@@ -101,7 +101,7 @@
                 <div>Bookings &amp; Management</div>
                 <div><a href="mailto:info@fifth.com">info@fifth.com</a></div>
                 <div><a href="https://www.fifth.nu" target="_blank">www.fifth.nu</a></div>
-                <div><a href="index.html">Electronic Press Kit</a></div>
+                <div><a href="../index.html">Electronic Press Kit</a></div>
             </div>
         </footer>
         <div class="footer-bottom">
