--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Tour dates, music releases, and updates from DJ and producer FIFTH.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.fifth.nu">
-    <meta property="og:image" content="https://www.fifth.nu/svg/fifth_LOGO_2.svg">
+    <meta property="og:image" content="https://www.fifth.nu/svg/fifth_LOGO_2_WHITE.svg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="FIFTH">
     <meta name="twitter:description" content="Tour dates, music releases, and updates from DJ and producer FIFTH.">
@@ -41,7 +41,6 @@
         <div class="header">
             <div class="logo">
                 <a href="index.html">
-                    <img src="svg/fifth_LOGO_2.svg" alt="FIFTH Logo" class="logo-black" style="width: 100px; height: auto;">
                     <img src="svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH Logo" class="logo-white" style="width: 100px; height: auto;">
                 </a>
             </div>
@@ -82,7 +81,7 @@
                 <div class="hero-slideshow"></div>
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <img src="svg/fifth_LOGO_2.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
+                    <img src="svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
                 </div>
             </section>
 
@@ -175,16 +174,6 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="website/script.js"></script>
-    <script>
-        // Fix paths for GitHub Pages immediately when page loads
-        if (window.location.hostname === 'fifthdnb.github.io') {
-            const basePath = '/FIFTH-Website';
-            // Fix all img tags with svg/ or img/ paths
-            document.querySelectorAll('img[src^="svg/"], img[src^="img/"]').forEach(img => {
-                img.src = basePath + '/' + img.getAttribute('src');
-            });
-        }
-    </script>
 </body>
 </html>
 
