--- a/index.html
+++ b/index.html
@@ -38,37 +38,8 @@
 
 <body class="main-body">
     <div class="main-div">
-        <div class="header">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH Logo" class="logo-white" style="width: 100px; height: auto;">
-                </a>
-            </div>
-            
-            <nav>
-                <button class="menu-toggle" aria-label="Open menu">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </button>
-                <div class="mobile-menu-wrapper">
-                    <ul class="mobile-menu-items">
-                        <li><a href="#music">Music</a></li>
-                        <li><a href="#agenda">Agenda</a></li>
-                        <li><a href="#updates">Updates</a></li>
-                        <li><a href="website/biography.html">Biography</a></li>
-                    </ul>
-                    <div class="mobile-menu-socials">
-                        <a href="https://open.spotify.com/artist/2nkPDrBTpqCFWeK3ZMLmlF" target="_blank" aria-label="Spotify"><i class="fa-brands fa-spotify"></i></a>
-                        <a href="#" target="_blank" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/fifthdnb" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://soundcloud.com/fifthdnb" target="_blank" aria-label="SoundCloud"><i class="fa-brands fa-soundcloud"></i></a>
-                        <a href="#" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.beatport.com/artist/fifth/742392" target="_blank" aria-label="Beatport"><i class="fa-solid fa-b"></i></a>
-                    </div>
-                </div>
-            </nav>
-        </div>
+        <!-- Header will be loaded here -->
+        <div id="header-container"></div>
 
         <main class="main-body">
             <!-- Hero Section -->
@@ -104,7 +75,7 @@
             </section>
 
             <!-- Photo Divider 1 -->
-            <section class="photo-divider" style="background-image: url('img/DSC01428.jpg');" data-aos="fade">
+            <section class="photo-divider" style="background-image: url('img/Biography_achtergrond.jpg');" data-aos="fade">
                 <div class="divider-overlay"></div>
             </section>
 
@@ -135,44 +106,19 @@
                     <div class="blog-grid" id="blog-grid">
                         <!-- Blog posts will be loaded here by JavaScript -->
                     </div>
+                    
+                    <div class="view-all-btn-wrapper" data-aos="fade-up">
+                        <a href="website/posts.html" class="view-all-btn">View All Posts</a>
+                    </div>
                 </div>
             </section>
         </main>
-        <footer>
-            <div class="footer-left">
-                <div>SITEMAP</div>
-                <ul>
-                    <li><a href="#music">MUSIC</a></li>
-                    <li><a href="#agenda">AGENDA</a></li>
-                    <li><a href="#updates">UPDATES</a></li>
-                    <li><a href="website/biography.html">BIOGRAPHY</a></li>
-                    <li><a href="#">SOCIALS</a></li>
-                </ul>
-            </div>  
-            <div class="footer-center">
-                <div>LINKS</div>
-                <ul>
-                    <li><a href="#" target="_blank">BEATPORT</a></li>
-                    <li><a href="#" target="_blank">INSTAGRAM</a></li>
-                    <li><a href="#" target="_blank">YOUTUBE</a></li>
-                    <li><a href="#" target="_blank">SPOTIFY</a></li>
-                    <li><a href="#" target="_blank">SOUNDCLOUD</a></li>
-                </ul>
-            </div>
-            <div class="footer-right">
-                <div><strong>FIFTH</strong></div>
-                <div>Bookings &amp; Management</div>
-                <div><a href="mailto:info@fifth.com">info@fifth.com</a></div>
-                <div><a href="https://www.fifth.nu" target="_blank">www.fifth.nu</a></div>
-                <div><a href="index.html">Electronic Press Kit</a></div>
-            </div>
-        </footer>
-        <div class="footer-bottom">
-            <p class="footer-copyright">&copy; 2026 FIFTH. All rights reserved.</p>
-        </div>
+        <!-- Footer will be loaded here -->
+        <div id="footer-container"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="website/config.js"></script>
     <script src="website/script.js"></script>
 </body>
 </html>
