--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="website/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <link rel="icon"  type="image/svg+xml" href="svg/fifth_LOGO_2.svg">
+    <link rel="icon"  type="image/svg+xml" href="./svg/fifth_LOGO_2.svg">
     <title>FIFTH - Drum & Bass Artist</title>
        
     <script type="application/ld+json">
@@ -46,13 +46,13 @@
             <section id="hero" class="hero-section">
                 <div class="loading-overlay">
                     <div class="loading-logo">
-                        <img src="svg/fifth_LOGO_2.svg" alt="FIFTH" class="pulse-logo">
+                        <img src="./svg/fifth_LOGO_2.svg" alt="FIFTH" class="pulse-logo">
                     </div>
                 </div>
                 <div class="hero-slideshow"></div>
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
-                    <img src="svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
+                    <img src="./svg/fifth_LOGO_2_WHITE.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
                 </div>
             </section>
 
@@ -75,7 +75,7 @@
             </section>
 
             <!-- Photo Divider 1 -->
-            <section class="photo-divider" style="background-image: url('img/Biography_achtergrond.jpg');" data-aos="fade">
+            <section class="photo-divider" style="background-image: url('./img/Biography_achtergrond.jpg');" data-aos="fade">
                 <div class="divider-overlay"></div>
             </section>
 
