--- a/website/biography.html
+++ b/website/biography.html
@@ -32,7 +32,7 @@
         <main>
             <!-- Hero Section -->
             <section class="hero-section" style="height: 50vh; min-height: 400px;">
-                <img src="../img/Biography_achtergrond.jpg" alt="FIFTH" style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0;">
+                <img src="../img/Biography_achtergrond.JPG" alt="FIFTH" style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0;">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <img src="../svg/fifth_LOGO_2.svg" alt="FIFTH" class="hero-logo" data-aos="fade-up">
@@ -46,8 +46,8 @@
                     
                     <div class="biography-split" data-aos="fade-up" data-aos-delay="100">
                         <div class="bio-image-wrapper">
-                            <img src="../img/Biography_1.jpg" alt="FIFTH Portrait" class="bio-main-image active" loading="lazy">
-                            <img src="../img/Biography_2.jpg" alt="FIFTH Portrait" class="bio-main-image" loading="lazy">
+                            <img src="../img/Biography_1.JPG" alt="FIFTH Portrait" class="bio-main-image active" loading="lazy">
+                            <img src="../img/Biography_2.JPG" alt="FIFTH Portrait" class="bio-main-image" loading="lazy">
                         </div>
                         <div class="bio-text-wrapper">
                             <div class="bio-card">
